# fstrace

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  common.h  events  gen.go  go.mod  go.sum  loop  main.go  openat.c  openat_bpfeb.go  openat_bpfel.go  test.sh  vmlinux.h
.devcontainer/: devcontainer.json
.devcontainer/scripts/: on_create.sh  post_start.sh
.github/workflows/: ci.yml
demo/: opensnoop.bpf.c  opensnoop.skel.json  package.json
demo/squashfs-root/: AppRun  cargo-appimage.desktop
fstrace/: client.go  fstrace  fstrace.go
fstraced/: dump  execve.c  execve_bpfeb.go  execve_bpfel.go  fstraced.go  gen.go  lsm_bpfeb.go  lsm_bpfel.go  vfs_bpfeb.go  vfs_bpfel.go
fstraced/bpf/: bpfdpath.c  dentry.h  execve.c  lsm.c  vfs.c  vmlinux.h
node/: package-lock.json  package.json
node/@fstrace/core/: fstest.js  index.cjs  index.d.ts  index.mjs  package.json  test.js
node/@fstrace/linux-x64-glibc/: .gitignore  package.json
node/fstrace/: .gitignore  package.json
src/: fs_ops.cc  fstrace.cc  fstrace_addon.cc  ptrace_patch.h  syscallnames.cc  trace_exec.cc
syscalls/: creat.c  mypid.c
test2/: 1.sh  2.js  3.sh  4.js
tests/: env-passthrough.sh  exit-code-passthrough.sh  signal-passthrough.sh  syscalls.cc  test_fstrace.cc  test_syscalls.cc
tests/approval-tests/: approval-tests.SyscallTests.Open.approved.txt  approval-tests.SyscallTests.OpenAt2.approved.txt  approval-tests.Syscalls.Open.approved.txt  approval-tests.Syscalls.OpenAt2_FDCWD.approved.txt  approval-tests.cc
tests/syscalls/: openat2.c
tests/syscalls/open/: basic.c
tests/syscalls/openat2/: fdcwd.c
